Contact Screen | Basic Functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.UnipiApp">
+        android:theme="@style/Theme.UnipiApp"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ui.contact.ContactActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.students.StudentsActivity"
             android:exported="false" />
