--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".timber.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/unipi_launcher_icon"
         android:label="@string/app_name"
@@ -17,9 +18,6 @@
             android:exported="false" />
         <activity
             android:name=".ui.about.AboutActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.syllabus.SyllabusActivity"
             android:exported="false" />
         <activity
             android:name=".ui.contact.ContactActivity"
