--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,11 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
+    def room_version = "2.4.2"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
