Refactoring: Students api call refactor with sealed class

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
 
     def retrofitVersion = '2.9.0'
+    def okhttpLoggingInterceptorVersion = '4.9.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-simplexml:$retrofitVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpLoggingInterceptorVersion"
 
     def daggerVersion = "2.13"
     implementation "com.google.dagger:dagger:$daggerVersion"
